--- a/package.json
+++ b/package.json
@@ -7,13 +7,17 @@
   "dependencies": {
     "@material-ui/core": "3.9.2",
     "@material-ui/icons": "3.0.2",
+    "apollo-boost": "^0.3.1",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "graphql": "^14.1.1",
+    "graphql-tag": "^2.10.1",
     "history": "4.7.2",
     "perfect-scrollbar": "1.4.0",
     "prettier": "1.16.4",
     "prop-types": "15.7.1",
     "react": "16.8.1",
+    "react-apollo": "^2.5.3",
     "react-chartist": "0.13.3",
     "react-dom": "16.8.1",
     "react-google-maps": "9.4.5",
@@ -50,6 +54,7 @@
   ],
   "devDependencies": {
     "eslint-config-prettier": "4.0.0",
-    "eslint-plugin-prettier": "3.0.1"
+    "eslint-plugin-prettier": "3.0.1",
+    "dotenv": "7.0.0"
   }
 }
