--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "apollo-boost": "^0.3.1",
     "chartist": "0.10.1",
     "classnames": "2.2.6",
+    "date-fns": "1.30.1",
     "graphql": "^14.1.1",
     "graphql-tag": "^2.10.1",
     "history": "4.7.2",
